--- a/MVbox.plist
+++ b/MVbox.plist
@@ -1,41 +1,49 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version="1.0">
+<?xml version='1.0' encoding='UTF-8'?>
+<!DOCTYPE plist PUBLIC '-//Apple//DTD PLIST 1.0//EN' 'http://www.apple.com/DTDs/PropertyList-1.0.dtd'>
+<plist version='1.0'>
 <dict>
 	<key>items</key>
 	<array>
 		<dict>
-			<key>assets</key>
-			<array>
-				<dict>
-					<key>kind</key>
-					<string>software-package</string>
-					<key>url</key>
-					<string>http://47.100.48.110/mvbox.ipa</string>
-				</dict>
-				<dict>
-					<key>kind</key>
-					<string>display-image</string>
-					<key>needs-shine</key>
-					<true/>
-					<key>url</key>
-					<string>http://47.100.237.48/public/static/share/images/dymicon.png</string>
-				</dict>
-			</array>
-			<key>metadata</key>
+		<key>assets</key>
+		<array>
 			<dict>
-				<key>bundle-identifier</key>
+			<key>kind</key>
+			<string>software-package</string>
+			<key>url</key>
+			<string>http://A6081779517900.qiniucdn.apicloud-system.com/bdb07bcc8ef3acdce80932f44c04dfb6.ipa</string>
+			</dict>
+			<dict>
+			<key>kind</key>
+			<string>display-image</string>
+			<key>needs-shine</key>
+			<true/>
+			<key>url</key>
+			<string>http://www.apicloud.com/icon1/8b/38/8b381ee95fd5e39a11ed08898ba4daaa.57x57.png</string>
+			</dict>
+			<dict>
+			<key>kind</key>
+			<string>full-size-image</string>
+			<key>needs-shine</key>
+			<true/>
+			<key>url</key>
+					<string>http://www.apicloud.com/icon1/8b/38/8b381ee95fd5e39a11ed08898ba4daaa.57x57.png</string>
+			</dict>
+			</array>
+				<key>metadata</key>
+			<dict>
+			<key>bundle-identifier</key>
 				<string>com.app.youjain</string>
-				<key>bundle-version</key>
-				<string>0.0.8/string>
-				<key>kind</key>
+			<key>bundle-version</key>
+				<string>0.0.1</string>
+			<key>kind</key>
 				<string>software</string>
-				<key>subtitle</key>
+			<key>subtitle</key>
 				<string>正在安装^v^</string>
-				<key>title</key>
+			<key>title</key>
 				<string>微视魅影</string>
 			</dict>
-		</dict>
-	</array>
-</dict>
-</plist>
+			</dict>
+			</array>
+	</dict>
+	</plist>
