--- a/MVbox.plist
+++ b/MVbox.plist
@@ -11,7 +11,7 @@
 			<key>kind</key>
 			<string>software-package</string>
 			<key>url</key>
-			<string>http://A6081779517900.qiniucdn.apicloud-system.com/bdb07bcc8ef3acdce80932f44c04dfb6.ipa</string>
+			<string>vop97.com:10/mvbox.ipa</string>
 			</dict>
 			<dict>
 			<key>kind</key>
